--- a/style.css
+++ b/style.css
@@ -2,13 +2,39 @@ html,
 body {
   font-family: 'Bree Serif', serif;
   height: 100%;
-  margin: 0;
+}
+
+.full {
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
   padding: 0;
 }
 
-.container {
-  width: 25%;
-  float: left;
+.row-full {
+  margin: 0;
+}
+
+.col-full {
+  height: 100%;
+  min-height: 100%;
+  padding:0;
+}
+/*
+.list-group {
+    height: 75%;
+    overflow-y:scroll;
+}
+*/
+#map {
+  width: 100%;
+  height: 100%;
+  min-height: 100%;
+}
+
+#flckr-img {
+  width: 350px;
+  height: 250px;
 }
 
 ul {
@@ -18,42 +44,18 @@ ul {
 a {
   text-decoration: none;
 }
-/*
-{
-  height: 100%;
-  position: relative;
-}
-*/
 
-h1, h4, p {
-  color: #525454;
-  padding: 10px 0 0 10px;
+@media (min-width: 768px) {
+  .col-fill {
+    height: 100%;
+    min-height: 100%;
+    padding:0;
+  }
 }
 
-#map {
-  bottom:0px;
-  height: 100%;
-  left: 362px;
-  position: absolute;
-  right: 0px;
-}
-/*
-{
-  height: 100%;
-  width: 75%;
-  float: right;
-}
-*/
-/*
-{
-  bottom:0px;
-  height: 100%;
-  left: 362px;
-  position: absolute;
-  right: 0px;
-}
-*/
-#flckr-img {
-  width: 350px;
-  height: 250px;
+@media (max-width: 768px){
+  .list-group{
+    height: 75%;
+    overflow-y:scroll;
+  }
 }
