--- a/style.css
+++ b/style.css
@@ -1,31 +1,11 @@
 html,
 body {
-  font-family: 'Bree Serif', serif;
+  font-family: Georgia, Times, "Times New Roman", serif;
   height: 100%;
-}
-
-.full {
-  width: 100%;
-  min-height: 100%;
-  height: 100%;
+  margin: 0;
   padding: 0;
 }
 
-.row-full {
-  margin: 0;
-}
-
-.col-full {
-  height: 100%;
-  min-height: 100%;
-  padding:0;
-}
-/*
-.list-group {
-    height: 75%;
-    overflow-y:scroll;
-}
-*/
 #map {
   width: 100%;
   height: 100%;
@@ -33,29 +13,81 @@ body {
 }
 
 #flckr-img {
-  width: 350px;
-  height: 250px;
+  width: 200px;
+  height: 150px;
+}
+
+.link-color {
+  color: black;
+}
+
+.header {
+  padding-bottom: 2%;
+  font-weight: 600;
+}
+.description {
+  display: none;
+	font-size: 14px;
+	font-style: normal;
+	font-variant: normal;
+	line-height: 20px;
 }
 
 ul {
   list-style: none;
+  height: 150px;
+  overflow-y: auto;
 }
 
-a {
-  text-decoration: none;
+.fill {
+  width: 100%;
+  min-height: 100%;
+  height: 100%;
+  padding: 0 0 0 1%;
+}
+
+.row-fill {
+  margin: 0;
+}
+
+.col-fill {
+  height: 50%;
+  min-height: 50%;
+  padding: 0;
+}
+
+.search-input {
+  width: 95%;
 }
 
 @media (min-width: 768px) {
   .col-fill {
     height: 100%;
     min-height: 100%;
-    padding:0;
+    padding: 0;
   }
-}
-
-@media (max-width: 768px){
-  .list-group{
-    height: 75%;
-    overflow-y:scroll;
+  .description {
+    font-size: 16px;
+    display: block;
+    padding: 3%;
+  }
+  #flckr-img {
+    width: 350px;
+    height: 250px;
+  }
+  ul {
+    height: 100%;
+  }
+  .header {
+    padding: 5% 3% 1% 3%;
+  }
+  .list-group {
+    padding-left: 3%;
+  }
+  .search-bar {
+    padding: 0 0 3% 3%;
+  }
+  .search-input {
+    width: 75%;
   }
 }
