Change marker color on click

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html, body {
 ul {
     list-style: none;
     height: 150px;
+    max-height: 150px;
     overflow-y: auto;
 }
 .fill {
@@ -66,6 +67,7 @@ ul {
     ul {
         list-style: none;
         height: 100%;
+        max-height: 260px;
         overflow-y: auto;
     }
     .header {
